Fix workflow null handling and reference validation